# Project-Mercury

./: CMakeLists.txt  README
include/: CMakeLists.txt  PMVideo.h
include/Video/: PMVideoClipper.h  PMVideoMasher.h
include/Video/VideoMidLevel/: PMVideoLowLevelManager.h
src/: CMakeLists.txt
src/Application/: CMakeLists.txt  PMVideoClipperUseCase.cxx  PMVideoLowLevelManagerUseCase.cxx  PMVideoMasherUseCase.cxx
src/Video/: CMakeLists.txt
src/Video/VideoLowLevel/: PMVideoClipper.cxx  PMVideoMasher.cxx
src/Video/VideoMidLevel/: PMVideoLowLevelManager.cxx
